[package]
name = "inicio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hexdump = "0.1.1"


#---------------------------------------------------
# Requeridos ejer_trait_rasgos
itertools = "0.10.5"

#---------------------------------------------------
# Requeridos por firebase, descomentar para usar
#firebase-rs = "2.0.6"
#serde_json = "1.0.91"
#serde = "1.0.152"
#tokio = { version = "1.25.0", features = ["full"] }
#---------------------------------------------------

#ump = "0.9.0"
#ureq = "2.6.2"

# graphviz-rust = "0.6.1"