[package]
name = "inicio"
version = "0.8.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.0"

#---------------------------------------------------
# Requerido pruebas GUI
# minifb = "0.24.0"
# termion = "2.0.1"
# piston_window = "0.128.0"

#---------------------------------------------------
# Requerido pruebas plotters
plotters = "0.3.4"

#---------------------------------------------------
# Requerido pruebas de CPU Generica
pancurses = "0.17.0"

#---------------------------------------------------
# Requeridos ejer_trait_rasgosx
itertools = "0.10.5"

#---------------------------------------------------
# Requeridos por firebase, descomentar para usar
#firebase-rs = "2.0.6"
#serde_json = "1.0.91"
#serde = "1.0.152"
#tokio = { version = "1.25.0", features = ["full"] }
#---------------------------------------------------

#ump = "0.9.0"
#ureq = "2.6.2"

# graphviz-rust = "0.6.1"